[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "testers_toolbox"
authors = [{name = "Stephan Svoboda", email = "stephan@svoboda.or.at"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/StephanSvoboda/testers_toolbox"
